* NEWS, bootstrap, configure.ac, ltmain.in, m4/libtool.m4: * m4/lt~obsolete.m4, tests/cdemo/configure.ac: Arghh.  cvsapply just went crazy and committed a bunch of stuff that shouldn't have been in the last changeset.  The patch backs it all out.

--- a/ltmain.in
+++ b/ltmain.in
@@ -73,14 +73,14 @@ if test "$package_revision" != "$macro_revision"; then
     if test -z "$macro_version"; then
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
-$progname: definition of this LT_INIT comes from an older release.
+$progname: definition of this AC_PROG_LIBTOOL comes from an older release.
 $progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
     else
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
-$progname: definition of this LT_INIT comes from $PACKAGE $macro_version.
+$progname: definition of this AC_PROG_LIBTOOL comes from $PACKAGE $macro_version.
 $progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
@@ -88,7 +88,7 @@ _LT_EOF
   else
     cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, revision $package_revision,
-$progname: but the definition used by this LT_INIT comes from revision
+$progname: but the definition used by this AC_PROG_LIBTOOL comes from revision
 $progname: $macro_revision.
 $progname: You should recreate aclocal.m4 with macro's from revision $package_revision
 $progname: of $PACKAGE $VERSION and run autoconf again.
@@ -107,14 +107,14 @@ if test "$package_revision" != "$macro_revision"; then
     if test -z "$macro_version"; then
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
-$progname: definition of this LT_INIT comes from an older release.
+$progname: definition of this AC_PROG_LIBTOOL comes from an older release.
 $progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
     else
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
-$progname: definition of this LT_INIT comes from $PACKAGE $macro_version.
+$progname: definition of this AC_PROG_LIBTOOL comes from $PACKAGE $macro_version.
 $progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
@@ -122,7 +122,7 @@ _LT_EOF
   else
     cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, revision $package_revision,
-$progname: but the definition used by this LT_INIT comes from revision
+$progname: but the definition used by this AC_PROG_LIBTOOL comes from revision
 $progname: $macro_revision.
 $progname: You should recreate aclocal.m4 with macro's from revision $package_revision
 $progname: of $PACKAGE $VERSION and run autoconf again.
