--- a/ltmain.in
+++ b/ltmain.in
@@ -25,7 +25,7 @@
 # the same distribution terms that you use for the rest of that program.
 
 
-basename="$SED 's,^.*/,,g'"
+basename="$SED s,^.*/,,g"
 
 # Work around backward compatibility issue on IRIX 6.5. On IRIX 6.4+, sh
 # is ksh but when the shell is invoked as "sh" and the current value of
