* ltmain.in: Fix typo: macro's -> macros.

--- a/ltmain.in
+++ b/ltmain.in
@@ -89,14 +89,14 @@ if test "$package_revision" != "$macro_revision"; then
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
 $progname: definition of this AC_PROG_LIBTOOL comes from an older release.
-$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: You should recreate aclocal.m4 with macros from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
     else
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
 $progname: definition of this AC_PROG_LIBTOOL comes from $PACKAGE $macro_version.
-$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: You should recreate aclocal.m4 with macros from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
     fi
@@ -105,7 +105,7 @@ _LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, revision $package_revision,
 $progname: but the definition used by this AC_PROG_LIBTOOL comes from revision
 $progname: $macro_revision.
-$progname: You should recreate aclocal.m4 with macro's from revision $package_revision
+$progname: You should recreate aclocal.m4 with macros from revision $package_revision
 $progname: of $PACKAGE $VERSION and run autoconf again.
 _LT_EOF
   fi
@@ -122,14 +122,14 @@ if test "$package_revision" != "$macro_revision"; then
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
 $progname: definition of this AC_PROG_LIBTOOL comes from an older release.
-$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: You should recreate aclocal.m4 with macros from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
     else
       cat >&2 <<_LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
 $progname: definition of this AC_PROG_LIBTOOL comes from $PACKAGE $macro_version.
-$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: You should recreate aclocal.m4 with macros from $PACKAGE $VERSION
 $progname: and run autoconf again.
 _LT_EOF
     fi
@@ -138,7 +138,7 @@ _LT_EOF
 $progname: Version mismatch error.  This is $PACKAGE $VERSION, revision $package_revision,
 $progname: but the definition used by this AC_PROG_LIBTOOL comes from revision
 $progname: $macro_revision.
-$progname: You should recreate aclocal.m4 with macro's from revision $package_revision
+$progname: You should recreate aclocal.m4 with macros from revision $package_revision
 $progname: of $PACKAGE $VERSION and run autoconf again.
 _LT_EOF
   fi
